<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <include layout="@layout/header_layout" />

    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            >

            <ImageButton
                style="@style/ItemIcon"
                android:id="@+id/login_icon"
                android:src="@drawable/login_black_24dp"
                android:contentDescription="@null"
                />

            <EditText
                style="@style/ItemEditText"
                android:id="@+id/login_input"
                android:hint="@string/login"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            >

            <ImageButton
                style="@style/ItemIcon"
                android:id="@+id/password_icon"
                android:src="@drawable/password_black_24dp"
                android:contentDescription="@null"
                />

            <EditText
                style="@style/ItemEditText"
                android:id="@+id/password_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <TextView
            style="@style/Message"
            android:id="@+id/log_in_message"
            android:text="@string/message_error"
            />

    </LinearLayout>


    <Button
        style="@style/MainButton"
        android:id="@+id/log_in"
        android:text="@string/button_log_in"
        app:layout_constraintTop_toBottomOf="@id/layout_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        />


    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layout_buttons"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <Button
            style="@style/SecondaryButton"
            android:id="@+id/sign_up"
            android:text="@string/button_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            style="@style/VerticalSeparator"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            />

        <Button
            style="@style/SecondaryButton"
            android:id="@+id/forgot_password"
            android:text="@string/button_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/layout_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageButton
            style="@style/ShareIcon"
            android:id="@+id/facebook"
            android:src="@drawable/facebook_black_24dp"
            android:contentDescription="@null"
            />

        <ImageButton
            style="@style/ShareIcon"
            android:id="@+id/vk"
            android:src="@drawable/vk_black_24dp"
            android:contentDescription="@null"
            />

        <ImageButton
            style="@style/ShareIcon"
            android:id="@+id/twitter"
            android:src="@drawable/twitter_black_24dp"
            android:contentDescription="@null"
            />

        <ImageButton
            style="@style/ShareIcon"
            android:id="@+id/google"
            android:src="@drawable/google_black_24dp"
            android:contentDescription="@null"
            />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>