<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <include layout="@layout/header_layout" />

    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            >

            <ImageButton
                style="@style/ItemIcon"
                android:id="@+id/register_login_icon"
                android:src="@drawable/login_black_24dp"
                android:contentDescription="@null"
                />

            <EditText
                style="@style/ItemEditText"
                android:id="@+id/register_login_input"
                android:hint="@string/login"
                android:inputType="text"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            >

            <ImageButton
                style="@style/ItemIcon"
                android:id="@+id/register_password_icon"
                android:src="@drawable/password_black_24dp"
                android:contentDescription="@null"
                />

            <EditText
                style="@style/ItemEditText"
                android:id="@+id/register_password_input"
                android:hint="@string/password"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            >

            <ImageButton
                style="@style/ItemIcon"
                android:id="@+id/register_repeat_password_icon"
                android:src="@drawable/repeat_password_black_24dp"
                android:contentDescription="@null"
                />

            <EditText
                style="@style/ItemEditText"
                android:id="@+id/register_repeat_password_input"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp"
            >

            <ImageButton
                style="@style/ItemIcon"
                android:id="@+id/register_email_icon"
                android:background="@android:color/transparent"
                android:src="@drawable/email_black_24dp"
                android:contentDescription="@null"
                />

            <EditText
                style="@style/ItemEditText"
                android:id="@+id/register_email_input"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                />

        </LinearLayout>

        <TextView
            style="@style/Message"
            android:id="@+id/register_message"
            />

    </LinearLayout>


    <Button
        style="@style/MainButton"
        android:id="@+id/register_button"
        android:text="@string/button_sign_up"
        app:layout_constraintTop_toBottomOf="@id/layout_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        />


</android.support.constraint.ConstraintLayout>